# OmniSafeBench-MM

./: README.md  pyproject.toml
attacks/qr/: attack.py
core/: unified_registry.py
evaluators/: judge_utils.py
multimodalmodels/minigpt4/: minigpt4_eval.yaml
pipeline/: base_pipeline.py  generate_test_cases.py
tests/: test_generate_test_cases.py
